# CppMaster

XML/: CMakeLists.txt  Tree.cpp  TreeForXML.cpp  XMLTree.cpp  XMLTree.h  main.cpp
calc/: CMakeLists.txt  Main.cpp  calc.cpp  calc.h  evaluator.cpp  evaluator.h  parser.cpp  parser.h  pluginloader.cpp  pluginloader.h  scanner.cpp  scanner.h  token.h
calc/pow/: CMakeLists.txt  pow.cpp
calc/trig/: CMakeLists.txt  trig.cpp
deque/: CMakeLists.txt  MemoryHeapStrategy.h  deque.cpp  deque.h
engine/: CMakeLists.txt  def.h  engine.cpp  engine.h  variadicVector.h  wrapper.h
reverse_list/: ReverseList.h  main.cpp
